--- a/secure_endpoint.html
+++ b/secure_endpoint.html
@@ -13,6 +13,7 @@
     <div id="root"></div>
 
     <script src="./js/constants.js"> </script>
+    <script src="./js/utils.js"> </script>
     <script src="./js/secure_endpoint.js"> </script>
 </body>
 </html>
