--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <link href="./css/login.css" rel="stylesheet" type="text/css"/>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <!-- <link href="./css/login.css" rel="stylesheet" type="text/css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
-    <div>
-        <form id="login">
-            <div>
-                <h1>
-                    Login
-                </h1>
-            </div>
-            <div>
-                <p id="login_error">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
 
-                </p>
+
+                <form id="login" class="border rounded py-3 px-4 shadow">
+                    <div class="text-center text-secondary mb-4">
+                        <h1>
+                            Login
+                        </h1>
+                    </div>
+                    <div class="form-group mb-4">
+                        <p id="login_error">
+
+                        </p>
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="username"> Username </label>
+                        <input class="form-control"  type="text" id="username">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="password"> Password </label>
+                        <input class="form-control"  type="password" id="password">
+                    </div>
+                    <div class="form-group mb-4 text-end">
+                        <button class="btn btn-outline-primary ">
+                            log in
+                        </button>
+                    </div>
+                    <div class="form-group mb-4 text-center">
+                        <a href="/signup.html"> Sign up </a>
+                    </div>
+                </form>
             </div>
-            <div>
-                <label for="username"> Username </label>
-                <input type="text" id="username">
-            </div>
-            <div>
-                <label for="password"> Password </label>
-                <input type="password" id="password">
-            </div>
-            <div>
-                <button>
-                        log in
-                </button>
-            </div>
-            <div>
-                <a href="/signup.html"> Sign up </a>
-            </div>
-        </form>
+        </div>
     </div>
 
     <script src="./js/constants.js"> </script>
     <script src="./js/login.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
