--- a/user/change_password.html
+++ b/user/change_password.html
@@ -5,32 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <title>Change Password</title>
 </head>
 <body>
-    <form>
-        <div>
-            <label for="curr_password"> current password </label>
-            <input type="text" id="curr_password">
+    <div class="container">
+        <div class="row">
+            
+            <div class="col col-lg-6 mx-auto">
+                <form class="text-capitalize border rounded shadow-lg px-5 py-4">
+                    <h1 class="fs-2 text-secondary text-center mb-4">
+                        Change Password
+                    </h1>
+                    <div class="form-group mb-4">
+                        <label for="curr_password"> current password </label>
+                        <input type="text" id="curr_password" class="form-control">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="new_password"> new password </label>
+                        <input type="text" id="new_password" class="form-control">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="new_password"> confirm new password </label>
+                        <input type="text" id="new_password" class="form-control">
+                    </div>
+                    <div class="form-group text-end">
+                        <button class="btn btn-outline-success text-capitalize">
+                                update
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div>
-            <label for="new_password"> new password </label>
-            <input type="text" id="new_password">
-        </div>
-        <div>
-            <label for="new_password"> confirm new password </label>
-            <input type="text" id="new_password">
-        </div>
-        <div>
-            <button>
-                    update
-            </button>
-        </div>
-    </form>
+    </div>
+    
 
     <script src="../js/constants.js"> </script>
     <script src="../js/utils.js"> </script>
     <script src="../js/user/change_password.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </body>
 </html>
