--- a/user/edit.html
+++ b/user/edit.html
@@ -1,58 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <title>User edit</title>
 </head>
+
 <body>
-    <div id="root">
-        <form id="editUser">
-            <div>
-                <h1>
-                    Edit User
-                </h1>
-            </div>
-            <div>
-                <p id="login_error">
-
-                </p>
-            </div>
-
-            <div>
-                <label for="first_name"> First Name </label>
-                <input type="text" id="first_name">
-            </div>
-            <div>
-                <label for="last_name"> Last Name </label>
-                <input type="text" id="last_name">
-            </div>
-            <div>
-                <label for="username"> Username </label>
-                <input type="text" id="username">
-            </div>
-
-            <div>
-                <label for="phone"> Phone </label>
-                <input type="text" id="phone">
-            </div>
-            <div>
-                <label for="gender"> gender </label>
-                <input type="radio"  value="male" name="gender" checked> male
-                <input type="radio"  value="female" name="gender"> female
-            </div>
+    <div id="root" class="container">
+        <div class="row">
             
-            <div>
-                <button>
-                        edit
-                </button>
+            <div class="col col-md-8 col-lg-6 mx-auto">
+                <form id="editUser" class="border shadow-lg rounded py-4 px-5">
+                    <div class="text-center">
+                        <h1 class="fs-2 text-secondary">
+                            Update User Info
+                        </h1>
+                    </div>
+                    <div class=" mb-4">
+                        <p id="login_error">
+
+                        </p>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label for="first_name"> First Name </label>
+                        <input class="form-control" type="text" id="first_name">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="last_name"> Last Name </label>
+                        <input class="form-control" type="text" id="last_name">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="username"> Username </label>
+                        <input class="form-control" type="text" id="username">
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label for="phone"> Phone </label>
+                        <input class="form-control" type="text" id="phone">
+                    </div>
+                    <div>
+                        <label for="gender mb-2"> Gender</label>
+                    </div>
+                    <div class="form-check ">
+                        <label for="male" class="text-capitalize form-check-label"> male </label>
+                        <input type="radio" id="male" value="male" name="gender" checked class="form-check-input">
+                    </div>
+                    <div class="form-check ">
+                        <label for="gender" for="female" class="text-capitalize form-check-label"> female </label>
+                        <input type="radio" id="female" value="female" name="gender" class="form-check-input">
+                    </div>
+
+                    <div class="form-group mb-4 text-end">
+                        <button class="btn btn-outline-success">
+                            edit
+                        </button>
+                    </div>
             </div>
+            <div class="col col-lg-3">
+                <h3> others </h3>
+                <ul>
+                    <li> <a href="change_password.html">change password</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <script src="../js/constants.js"> </script>
     <script src="../js/utils.js"> </script>
     <script src="../js/edit.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
