--- a/user/home.html
+++ b/user/home.html
@@ -1,35 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="../css/user/home.css" rel="stylesheet" type="text/css" />
     <title>User home</title>
 </head>
+
 <body>
-    <div>
+    <div class="container">
         <div>
-            <h1 id="welcome_user"></h1>
+            <h1 id="welcome_user" class="text-secondary mb-4"></h1>
         </div>
-        <div>
-            <div> 
-                <b> Name </b> : <span id="first_name"> </span> <span id="last_name"> </span>
+        <div class="row">
+            <div class="col-md-10 col-lg-6 mx-auto shadow py-3 px-4 rounded-pill text-center">
+                <div class="d-inline-block">
+                    <div class="row mb-4">
+                        <div class="col">
+                            <h1 class="text-secondary" id="user_detail_heading"> User Details</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <table class="col text-capitalize d-inline-block text-start">
+                            <tr>
+                                <th>Name</th>
+                                <td> <span id="first_name"> </span> <span id="last_name"> </span></td>
+                            </tr>
+                            <tr>
+                                <th>username</th>
+                                <td> <span id="username"> </span> </td>
+                            </tr>
+                            <tr>
+                                <th>phone</th>
+                                <td> <span id="phone"> </span> </td>
+                            </tr>
+                            <tr>
+                                <th>gender</th>
+                                <td> <span id="gender"> </span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="row text-end">
+                        <div class="col">
+                            <a class="text-capitalize btn btn-outline-danger" href="/user/edit.html">
+                                edit
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
-            <div> 
-                <b> username </b> : <span id="username"> </span>
-            </div>
-            <div> 
-                <b> phone </b> : <span id="phone"> </span>
-            </div>
-            <div> 
-                <b> gender </b> : <span id="gender"> </span>
-            </div>
+        </div>
+        <div class="mt-5">
+            <a href="/student/student_detail_form.html" class="btn btn-outline-primary"> Student Details </a>
         </div>
     </div>
 
     <script src="../js/constants.js"> </script>
     <script src="../js/utils.js"> </script>
     <script src="../js/home.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
