--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
                         <label for="phone"> Phone </label>
                         <input class="form-control" type="text" id="phone">
                     </div>
-
+                    
                     <div>
                         <label for="gender mb-2"> Gender</label>
                     </div>
@@ -62,6 +62,12 @@
                         <label for="gender" for="female" class="text-capitalize form-check-label"> female </label>
                         <input type="radio" id="female" value="female" name="gender" class="form-check-input">
                     </div>
+                    
+                    <div class="form-group mb-4 mt-4">
+                        <label for="image"> Image </label>
+                        <input class="form-control" type="file" id="image" onchange="encodeImageFileAsURL(this)" accept="image/png, image/jpeg">
+                    </div>
+
                     <div class="form-group mb-4 text-end">
                         <button class="btn btn-outline-primary">
                             Sign up
@@ -78,6 +84,7 @@
     </div>
 
     <script src="./js/constants.js"> </script>
+    <script src="./js/utils.js"></script>
     <script src="./js/signup.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
