--- a/user/home.html
+++ b/user/home.html
@@ -38,8 +38,7 @@
                                         class="text-capitalize d-inline-block text-center table table-striped border mx-auto w-100 rounded">
                                         <tr >
                                             <th>Name</th>
-                                            <td class="w-100 text-center"> <span id="first_name"> </span> <span
-                                                    id="last_name"> </span></td>
+                                            <td class="w-100 text-center"> <span id="name"> </span> </td>
                                         </tr>
                                         <tr>
                                             <th>username</th>
