--- a/student/student_details.html
+++ b/student/student_details.html
@@ -16,7 +16,7 @@
 <body style="position: relative;">
   <div class="row container mx-auto mb-3">
     <div class="col col-md-5 mx-auto">
-      <h3 class="text-center fw-bold">
+      <h3 class="text-center fw-bold text-secondary">
         Student Details
       </h3>
     </div>
@@ -27,11 +27,7 @@
     </div>
 
   </div>
-  <a href="/student/student_detail_form.html" class="fab bg-success text-white  text-decoration-none text-white">
-    <div>
-      +
-    </div>
-  </a>
+
   <script src="../js/constants.js"> </script>
   <script src="../js/utils.js"> </script>
   <script src="../js/student/student_details.js"> </script>
