--- a/user/home.html
+++ b/user/home.html
@@ -38,7 +38,7 @@
                                         class="text-capitalize d-inline-block text-center table table-striped border mx-auto w-100 rounded">
                                         <tr >
                                             <th>Name</th>
-                                            <td class="w-100 text-center"> <span id="name"> </span> </td>
+                                            <td class="w-100 text-center"> <span id="firstName"> </span> <span id="lastName"> </span> </td>
                                         </tr>
                                         <tr>
                                             <th>username</th>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row text-center mt-4">
                         <div class="col">
-                            <a class=" link-primary" href="/user/edit.html">
+                            <a class=" btn btn-outline-primary" href="/user/edit.html">
                                 edit user details
                             </a>
                         </div>
