--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </h1>
                     </div>
                     <div class="form-group mb-4">
-                        <p id="login_error">
+                        <p id="login_error" class="text-center text-danger">
 
                         </p>
                     </div>
