--- a/signup.html
+++ b/signup.html
@@ -47,8 +47,20 @@
                         <input class="form-control" type="password" id="password">
                     </div>
                     <div class="form-group mb-4">
+                        <label for="email"> E-mail </label>
+                        <input class="form-control" type="text" id="email">
+                    </div>
+                    <div class="form-group mb-4">
                         <label for="phone"> Phone </label>
                         <input class="form-control" type="text" id="phone">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="address"> Address </label>
+                        <input class="form-control" type="text" id="address">
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="dob"> Date of Birth </label>
+                        <input class="form-control" type="text" id="dob">
                     </div>
                     
                     <div>
